--- a/touch.html
+++ b/touch.html
@@ -7,14 +7,19 @@
 	<style>
 		.box{
 			width:300px;
-			height:400px;
+			height:200px;
 			background:#ddd;
 		}
-
+		a{
+			display:block;
+			width:50px;
+			height:50px;
+		}
 	</style>
 </head>
 <body>
 	<div class="box"></div>
+	<a href="http://www.baidu.com">baidu</a>
 	<p class="p1"></p>
 	<p class="p2"></p>
 	<p class="p3"></p>
