--- a/touch.html
+++ b/touch.html
@@ -28,24 +28,24 @@
 		var p1=document.querySelector(".p1");
 		var p2=document.querySelector(".p2");
 		var p3=document.querySelector(".p3");
-		box.addEventListener('click',function(e){
-			alert('clicked')
-		})
-		box.addEventListener('touchstart',function(e){
-			p1.innerHTML="e.touches.length:"+e.touches.length;
-			p2.innerHTML="e.targetTouches.length:"+e.targetTouches.length;
-			p3.innerHTML="e.changedTouches.length:"+e.changedTouches.length;
-		})
-		box.addEventListener('touchmove',function(e){
-			p1.innerHTML="e.touches.length:"+e.touches.length;
-			p2.innerHTML="e.targetTouches.length:"+e.targetTouches.length;
-			p3.innerHTML="e.changedTouches.length:"+e.changedTouches.length;
-		})
-		box.addEventListener('touchend',function(e){
-			p1.innerHTML="e.touches.length:"+e.touches.length;
-			p2.innerHTML="e.targetTouches.length:"+e.targetTouches.length;
-			p3.innerHTML="e.changedTouches.length:"+e.changedTouches.length;
-		})
+		// box.addEventListener('click',function(e){
+		// 	alert('clicked')
+		// })
+		// box.addEventListener('touchstart',function(e){
+		// 	p1.innerHTML="e.touches.length:"+e.touches.length;
+		// 	p2.innerHTML="e.targetTouches.length:"+e.targetTouches.length;
+		// 	p3.innerHTML="e.changedTouches.length:"+e.changedTouches.length;
+		// })
+		// box.addEventListener('touchmove',function(e){
+		// 	p1.innerHTML="e.touches.length:"+e.touches.length;
+		// 	p2.innerHTML="e.targetTouches.length:"+e.targetTouches.length;
+		// 	p3.innerHTML="e.changedTouches.length:"+e.changedTouches.length;
+		// })
+		// box.addEventListener('touchend',function(e){
+		// 	p1.innerHTML="e.touches.length:"+e.touches.length;
+		// 	p2.innerHTML="e.targetTouches.length:"+e.targetTouches.length;
+		// 	p3.innerHTML="e.changedTouches.length:"+e.changedTouches.length;
+		// })
 	</script>
 </body>
 </html>
