--- a/touch.html
+++ b/touch.html
@@ -9,6 +9,8 @@
 			width:300px;
 			height:200px;
 			background:#ddd;
+			position:absolute;
+			opacity:0.5;
 		}
 		a{
 			display:block;
@@ -32,6 +34,9 @@
 		// box.addEventListener('click',function(e){
 		// 	alert('clicked')
 		// })
+		box.addEventListener('touchstart',function(e){
+			this.style.display="none";
+		})
 		// box.addEventListener('touchstart',function(e){
 		// 	p1.innerHTML="e.touches.length:"+e.touches.length;
 		// 	p2.innerHTML="e.targetTouches.length:"+e.targetTouches.length;
