--- a/touch.html
+++ b/touch.html
@@ -35,6 +35,7 @@
 		// 	alert('clicked')
 		// })
 		box.addEventListener('touchstart',function(e){
+			e.preventDefault();
 			this.style.display="none";
 		})
 		// box.addEventListener('touchstart',function(e){
